--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
 <!-- Верхняя линия -->
-    <header>
+    <!-- <header>
         <div class="container header-container">
         <nav class="nav">
         <a href="./index.html" class="logo-nav">
@@ -47,7 +47,7 @@
                 38 096 111 11 11</a></li>
     </ul>
     </div>
-    </header>
+    </header> -->
     <main>
 <!-- Шапка -->
 <section class="hero">
@@ -57,7 +57,7 @@
 </div>
 </section>
 <!--Особенности -->
-<section class="section">
+<!-- <section class="section">
     <h2 hidden>Внимание к деталям</h2>
     <div class="container">
     <ul class="peculiarities">
@@ -100,9 +100,9 @@
         </li>
     </ul>
     </div>
-</section>
+</section> -->
 <!--Чем мы занимаемся -->
-<section class="section">
+<!-- <section class="section">
     <div class="container">
     <h2 class="section-box-title">Чем мы занимаемся</h2>
         <ul class="pictures">
@@ -132,9 +132,9 @@
         </li>
     </ul>
     </div>
-</section>
+</section> -->
 <!--Наша команда -->
-<section class="section-item">
+<!-- <section class="section-item">
     <div class="container">
     <h2 class="section-box-title">Наша команда</h2>
         <ul class="item">
@@ -288,9 +288,9 @@
         </li>
     </ul>
     </div>
-</section>
+</section> -->
 <!-- Постоянные Клиенты -->
-<section class="clients">
+<!-- <section class="clients">
     <div class="container">
         <h2 class="section-box-title">Постоянные клиенты</h2>
         <ul class="clients-box">
@@ -340,10 +340,10 @@
 
     </div>
 
-</section>
+</section> -->
 </main>
 <!--Подвал -->
-<footer class="footer">
+<!-- <footer class="footer">
     <div class="wrap-footer">
         <div class="container wrap-footer-container">
             <div class="footer-left-box">
@@ -412,7 +412,7 @@
                     </div>
                     </div>
                     </div>
-</footer>
+</footer> -->
 <div class="backdrop is-hidden" data-modal>
     <div class="modal">
         <button type="button" class="btn-close" data-modal-close>
