--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 </div>
 </section>
 <!--Особенности -->
-<!-- <section class="section">
+<section class="section">
     <h2 hidden>Внимание к деталям</h2>
     <div class="container">
     <ul class="peculiarities">
@@ -100,7 +100,7 @@
         </li>
     </ul>
     </div>
-</section> -->
+</section>
 <!--Чем мы занимаемся -->
 <!-- <section class="section">
     <div class="container">
