--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     </div>
 </section>
 <!--Чем мы занимаемся -->
-<!-- <section class="section">
+<section class="section reviews">
     <div class="container">
     <h2 class="section-box-title">Чем мы занимаемся</h2>
         <ul class="pictures">
@@ -132,9 +132,9 @@
         </li>
     </ul>
     </div>
-</section> -->
+</section>
 <!--Наша команда -->
-<!-- <section class="section-item">
+<section class="section-item">
     <div class="container">
     <h2 class="section-box-title">Наша команда</h2>
         <ul class="item">
@@ -288,7 +288,7 @@
         </li>
     </ul>
     </div>
-</section> -->
+</section>
 <!-- Постоянные Клиенты -->
 <!-- <section class="clients">
     <div class="container">
