--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
     <h2 class="section-box-title">Наша команда</h2>
         <ul class="item">
         <li class="item__list">
-            <img  class="item__img" src="./img/igor.jpg" alt="Igor" width="450" height="460" >
+            <img  class="item__img" src="./img/igor.jpg" alt="Igor"  >
             <div class="item-info"> 
             <h3 class="item-info__name">Игорь Демьяненко</h3>
             <p class="item-info__text" lang="en">Product Designer</p>
@@ -176,7 +176,7 @@
             </ul>
         </li>
         <li class="item__list">
-            <img class="item__img" src="./img/olga.jpg" alt="Olga" width="450" height="460">
+            <img class="item__img" src="./img/olga.jpg" alt="Olga" >
             <div class="item-info">
             <h3 class="item-info__name">Ольга Репина</h3>
             <p class="item-info__text" lang="en">Frontend Developer</p>
@@ -213,7 +213,7 @@
             </ul>
         </li>
         <li class="item__list">
-            <img class="item__img" src="./img/nikolay.jpg" alt="Nikolay" width="450" height="460">
+            <img class="item__img" src="./img/nikolay.jpg" alt="Nikolay">
             <div class="item-info">
             <h3 class="item-info__name">Николай Тарасов</h3>
             <p class="item-info__text" lang="en">Marketing</p>
@@ -250,7 +250,7 @@
             </ul>
         </li>
         <li class="item__list">
-            <img class="item__img" src="./img/mikhail.jpg" alt="Michail" width="450" height="460">
+            <img class="item__img" src="./img/mikhail.jpg" alt="Michail" >
             <div class="item-info">
             <h3 class="item-info__name">Михаил Ермаков</h3>
             <p class="item-info__text" lang="en">UI Designer</p>
