--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 <!--Чем мы занимаемся -->
 <section class="section reviews">
     <div class="container">
-    <h2 class="section-box-title">Чем мы занимаемся</h2>
+    <h2 class="section-box-title box">Чем мы занимаемся</h2>
         <ul class="pictures">
         <li>
             <div class="pictures__thumb">
