--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
     </div>
 </section>
 <!-- Постоянные Клиенты -->
-<!-- <section class="clients">
+<section class="clients">
     <div class="container">
         <h2 class="section-box-title">Постоянные клиенты</h2>
         <ul class="clients-box">
@@ -337,10 +337,8 @@
                 </div>
             </li>
         </ul>
-
     </div>
-
-</section> -->
+</section>
 </main>
 <!--Подвал -->
 <!-- <footer class="footer">
