--- a/index.html
+++ b/index.html
@@ -17,13 +17,22 @@
 </head>
 <body>
 <!-- Верхняя линия -->
-    <!-- <header>
+    <header>
         <div class="container header-container">
         <nav class="nav">
         <a href="./index.html" class="logo-nav">
         Web<span class="logo-color">Studio</span>
         </a>
-    <ul class="site-nav">
+<div class="menu">
+        <button class="menu__toggle js-open-menu" aria-expanded="false" aria-controls="mobile-menu">
+            <svg width="40" height="40" fill="currentColor"
+                    viewBox="0 0 32 32">
+                <use href="./img/symboldefs2.svg#icon-menu40px">
+                </use>
+            </svg>
+        </button>
+</div>
+        <ul class="site-nav">
         <li class="site-nav__item">
             <a href="./index.html" class="contacts__link current">Студия</a></li>
         <li class="site-nav__item">
@@ -47,7 +56,7 @@
                 38 096 111 11 11</a></li>
     </ul>
     </div>
-    </header> -->
+    </header>
     <main>
 <!-- Шапка -->
 <section class="hero">
@@ -411,6 +420,20 @@
                     </div>
                     </div>
 </footer> -->
+
+<div class="menu-container js-menu-container" id="mobile-menu">
+    <button class="menu-toggle js-close-menu">
+        <svg width="40" height="40" fill="currentColor"
+                    viewBox="0 0 20 20">
+            <use href="./img/symboldefs2.svg#icon-close40px">
+            </use>
+        </svg>
+    </button>
+
+    <ul class="mobile-menu">
+        <li></li>
+    </ul>
+</div>
 <div class="backdrop is-hidden" data-modal>
     <div class="modal">
         <button type="button" class="btn-close" data-modal-close>
@@ -482,5 +505,9 @@
     </div>
 </div>
 <script src="./js/modal.js"></script>
+<script defer src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
+    integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
+    crossorigin="anonymous"></script>
+<script defer src="js/mobile-menu.js"></script>
 </body>
 </html>
