--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
 </footer> -->
 
 <div class="menu-container js-menu-container" id="mobile-menu">
-    <button class="menu-toggle js-close-menu">
+    <button class="menu__toggle js-close-menu">
         <svg width="40" height="40" fill="currentColor"
                     viewBox="0 0 20 20">
             <use href="./img/symboldefs2.svg#icon-close40px">
@@ -431,7 +431,15 @@
     </button>
 
     <ul class="mobile-menu">
-        <li></li>
+        <li>
+            <a href="./index.html" class="mobile-menu-link">Студия</a>
+        </li>
+        <li>
+            <a href="./portfolio.html" class="mobile-menu-link">Портфолио</a>
+        </li>
+        <li class="">
+            <a href="#" class="mobile-menu-link">Контакты</a>
+        </li>
     </ul>
 </div>
 <div class="backdrop is-hidden" data-modal>
