--- a/portfolio.html
+++ b/portfolio.html
@@ -22,6 +22,14 @@
             <nav class="nav">
                 <a href="./index.html" class="logo-nav">Web<span class="logo-nav_color">Studio</span>
                 </a>
+                <div class="menu">
+                    <button class="menu__toggle js-open-menu" aria-expanded="false" aria-controls="mobile-menu">
+                        <svg width="40" height="40" fill="currentColor" viewBox="0 0 32 32">
+                            <use href="./img/symboldefs2.svg#icon-menu40px">
+                            </use>
+                        </svg>
+                    </button>
+                </div>
                 <ul class="site-nav">
                     <li class="site-nav__item"><a href="./index.html" class="contacts__link current">Студия</a></li>
                     <li class="site-nav__item"><a href="./portfolio.html" class="contacts__link current">Портфолио</a></li>
@@ -256,7 +264,29 @@
         </div>
     </div>
 </footer>
+<div class="menu-container js-menu-container" id="mobile-menu">
+    <button class="menu__toggle js-close-menu">
+        <svg width="40" height="40" fill="currentColor" viewBox="0 0 20 20">
+            <use href="./img/symboldefs2.svg#icon-close40px">
+            </use>
+        </svg>
+    </button>
 
-
+    <ul class="mobile-menu">
+        <li>
+            <a href="./index.html" class="mobile-menu-link">Студия</a>
+        </li>
+        <li>
+            <a href="./portfolio.html" class="mobile-menu-link">Портфолио</a>
+        </li>
+        <li class="">
+            <a href="#" class="mobile-menu-link">Контакты</a>
+        </li>
+    </ul>
+</div>
+<script defer src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
+    integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
+    crossorigin="anonymous"></script>
+<script defer src="js/mobile-menu.js"></script>
 </body>
 </html>
