--- a/index.html
+++ b/index.html
@@ -437,8 +437,30 @@
         <li>
             <a href="./portfolio.html" class="mobile-menu-link">Портфолио</a>
         </li>
-        <li class="">
+        <li>
             <a href="#" class="mobile-menu-link">Контакты</a>
+        </li>
+    </ul>
+    <ul class="mobile-menu-2">
+        <li class="mobile-menu-contacts">
+            <a href="tel:380961111111" class="mobile-menu-phone">38 096 111 11 11</a>
+        </li>
+        <li class="mobile-menu-contacts">
+            <a href="mailto:info@devstudio.com" class="mobile-menu-email">info@devstudio.com</a>
+        </li>
+    </ul>
+    <ul class="menu-social">
+        <li class="mobile-menu-social">
+            <a href="" class="mobile-menu-social-link line">Instagram</a>
+        </li>
+        <li class="mobile-menu-social">
+            <a href="" class="mobile-menu-social-link line">Twitter</a>
+        </li>
+        <li class="mobile-menu-social">
+            <a href="" class="mobile-menu-social-link line">Facebook</a>
+        </li>
+        <li class="mobile-menu-social">
+            <a href="" class="mobile-menu-social-link">LinkedIn</a>
         </li>
     </ul>
 </div>
