--- a/index.html
+++ b/index.html
@@ -34,21 +34,21 @@
 </div>
         <ul class="site-nav">
         <li class="site-nav__item">
-            <a href="./index.html" class="contacts__link current">Студия</a></li>
+            <a href="./index.html" class="contacts__link current left">Студия</a></li>
         <li class="site-nav__item">
-            <a href="./portfolio.html" class="contacts__link current">Портфолио</a></li>
+            <a href="./portfolio.html" class="contacts__link current left">Портфолио</a></li>
         <li class="site-nav__item">
-            <a href="#" class="contacts__link current">Контакты</a></li>
+            <a href="#" class="contacts__link current left">Контакты</a></li>
     </ul>
         </nav>
     <ul class="contacts">
-        <li class="contacts__link">
+        <li class="contacts__link ">
             <a href="mailto:info@devstudio.com" class="contacts__links1">
                 <svg class="links-icon" width="16" height="12">
                     <use href="./img/symbol-defs.svg#icon-envelopehover"></use>
                 </svg>
                 info@devstudio.com</a></li>
-        <li class="contacts__link">
+        <li class="contacts__link ">
             <a href="tel:380961111111" class="contacts__links1">
                 <svg class="links-icon" width="10" height="16" >
                     <use href="./img/symbol-defs.svg#icon-smartphone"></use>
