--- a/portfolio.html
+++ b/portfolio.html
@@ -31,9 +31,9 @@
                     </button>
                 </div>
                 <ul class="site-nav">
-                    <li class="site-nav__item"><a href="./index.html" class="contacts__link current">Студия</a></li>
-                    <li class="site-nav__item"><a href="./portfolio.html" class="contacts__link current">Портфолио</a></li>
-                    <li class="site-nav__item"><a href="#" class="contacts__link current">Контакты</a></li>
+                    <li class="site-nav__item"><a href="./index.html" class="contacts__link current left">Студия</a></li>
+                    <li class="site-nav__item"><a href="./portfolio.html" class="contacts__link current left">Портфолио</a></li>
+                    <li class="site-nav__item"><a href="#" class="contacts__link current left">Контакты</a></li>
                 </ul>
             </nav>
             <div class="header-contacts">
