--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@
             <a href="./index.html" class="mobile-menu-link">Студия</a>
         </li>
         <li>
-            <a href="./portfolio.html" class="mobile-menu-link">Портфолио</a>
+            <a href="#" class="mobile-menu-link">Портфолио</a>
         </li>
         <li>
             <a href="#" class="mobile-menu-link">Контакты</a>
