--- a/index.html
+++ b/index.html
@@ -196,9 +196,13 @@
         </li>
         <li class="item__list">
             <picture>
-                <source media="(min-width:1200px)" srcset="/img/Comands/compressjpegDesktop/comands-desktop-foto2-1x-min.jpg 1x,
+                <source 
+                    media="(min-width:1200px)" 
+                    srcset="/img/Comands/compressjpegDesktop/comands-desktop-foto2-1x-min.jpg 1x,
                                 /img/Comands/compressjpegDesktop/comands-desktop-foto2-2x-min.jpg 2x" />
-                <source media="(min-width:768px)" srcset="/img/Comands/compressjpegtab/comands-tab-foto2-1x-min.jpg 1x,
+                <source 
+                    media="(min-width:768px)" 
+                    srcset="/img/Comands/compressjpegtab/comands-tab-foto2-1x-min.jpg 1x,
                                 /img/Comands/compressjpegtab/comands-tab-foto2-2x-min.jpg 2x" />
                 <img class="item__img" src="./img/olga.jpg" alt="Olga">
             </picture>
@@ -239,9 +243,13 @@
         </li>
         <li class="item__list">
             <picture>
-                <source media="(min-width:1200px)" srcset="/img/Comands/compressjpegDesktop/comands-desktop-foto3-1x-min.jpg 1x,
+                <source 
+                    media="(min-width:1200px)" 
+                    srcset="/img/Comands/compressjpegDesktop/comands-desktop-foto3-1x-min.jpg 1x,
                                             /img/Comands/compressjpegDesktop/comands-desktop-foto3-2x-min.jpg 2x" />
-                <source media="(min-width:768px)" srcset="/img/Comands/compressjpegtab/comands-tab-foto3-1x-min.jpg 1x,
+                <source 
+                    media="(min-width:768px)" 
+                    srcset="/img/Comands/compressjpegtab/comands-tab-foto3-1x-min.jpg 1x,
                                             /img/Comands/compressjpegtab/comands-tab-foto3-2x-min.jpg 2x" />
                 <img class="item__img" src="./img/nikolay.jpg" alt="Nikolay">
             </picture>
@@ -282,10 +290,14 @@
         </li>
         <li class="item__list">
             <picture>
-                <source media="(min-width:1200px)" srcset="/img/Comands/compressjpegDesktop/comands-desktop-foto4-1x-min.jpg 1x,
-                                                        /img/Comands/compressjpegDesktop/comands-desktop-foto4-2x-min.jpg 2x" />
-                <source media="(min-width:768px)" srcset="/img/Comands/compressjpegtab/comands-tab-foto4-1x-min.jpg 1x,
-                                                        /img/Comands/compressjpegtab/comands-tab-foto4-2x-min.jpg 2x" />
+                <source 
+                    media="(min-width:1200px)" 
+                    srcset="/img/Comands/compressjpegDesktop/comands-desktop-foto4-1x-min.jpg 1x,
+                        /img/Comands/compressjpegDesktop/comands-desktop-foto4-2x-min.jpg 2x" />
+                <source 
+                media="(min-width:768px)" 
+                srcset="/img/Comands/compressjpegtab/comands-tab-foto4-1x-min.jpg 1x,
+                        /img/Comands/compressjpegtab/comands-tab-foto4-2x-min.jpg 2x" />
                 <img class="item__img" src="./img/mikhail.jpg" alt="Michail">
             </picture>
                     <div class="item-info">
