--- a/portfolio.html
+++ b/portfolio.html
@@ -76,7 +76,17 @@
 <ul class="gallery">
     <div class="icon">
             <div class="overlay">
-                <img src="./img/foto1.jpg" alt="foto1" width="370" height="294">
+                <picture>
+                    <source 
+                        media="(min-width:1200px)" 
+                        srcset="/img/Gallery/compressjpegDesktop/gallery-desktop-foto1-1x-min.jpg 1x,
+                                /img/Gallery/compressjpegDesktop/gallery-desktop-foto1-2x-min.jpg 2x" />
+                    <source 
+                        media="(min-width:768px)" 
+                        srcset="/img/Gallery/compressjpegTab/gallery-tab-foto1-1x-min.jpg 1x,
+                                /img/Gallery/compressjpegTab/gallery-tab-foto1-2x-min.jpg 2x" />
+                    <img src="./img/foto1.jpg" alt="foto1" width="370" height="294">
+                </picture>
                         <p class="overlay__text">
                             Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
                                 шпионажа и атак на защищённые сервера конкурентов.
@@ -90,8 +100,18 @@
     </li>
     <li class="icon">
             <div class="overlay">
-        <img src="./img/foto2.jpg" alt="foto2" width="370" height="294">
-                        <p class="overlay__text">
+                <picture>
+                    <source 
+                        media="(min-width:1200px)" 
+                        srcset="/img/Gallery/compressjpegDesktop/gallery-desktop-foto2-1x-min.jpg 1x,
+                                /img/Gallery/compressjpegDesktop/gallery-desktop-foto2-2x-min.jpg 2x" />
+                    <source 
+                        media="(min-width:768px)" 
+                        srcset="/img/Gallery/compressjpegTab/gallery-tab-foto2-1x-min.jpg 1x,
+                                /img/Gallery/compressjpegTab/gallery-tab-foto2-2x-min.jpg 2x" />
+                <img src="./img/foto2.jpg" alt="foto2" width="370" height="294">
+            </picture>
+                    <p class="overlay__text">
                             Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
                                 шпионажа и атак на защищённые сервера конкурентов.
                         </p>
@@ -103,8 +123,18 @@
     </li>
     <li class="icon">
         <div class="overlay">
-        <img src="./img/foto3.jpg" alt="foto3" width="370" height="294">
-        <p class="overlay__text">
+            <picture>
+                <source 
+                    media="(min-width:1200px)" 
+                    srcset="/img/Gallery/compressjpegDesktop/gallery-desktop-foto3-1x-min.jpg 1x,
+                            /img/Gallery/compressjpegDesktop/gallery-desktop-foto3-2x-min.jpg 2x" />
+                <source 
+                    media="(min-width:768px)" 
+                    srcset="/img/Gallery/compressjpegTab/gallery-tab-foto3-1x-min.jpg 1x,
+                            /img/Gallery/compressjpegTab/gallery-tab-foto3-2x-min.jpg 2x" />
+                <img src="./img/foto3.jpg" alt="foto3" width="370" height="294">
+            </picture>
+                <p class="overlay__text">
             Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
             шпионажа и атак на защищённые сервера конкурентов.
         </p>
@@ -116,8 +146,18 @@
     </li>
     <li class="icon">
         <div class="overlay">
-        <img src="./img/foto4.jpg" alt="foto4" width="370" height="294">
-        <p class="overlay__text">
+            <picture>
+                <source 
+                    media="(min-width:1200px)" 
+                    srcset="/img/Gallery/compressjpegDesktop/gallery-desktop-foto4-1x-min.jpg 1x,
+                            /img/Gallery/compressjpegDesktop/gallery-desktop-foto4-2x-min.jpg 2x" />
+                <source 
+                    media="(min-width:768px)" 
+                    srcset="/img/Gallery/compressjpegTab/gallery-tab-foto4-1x-min.jpg 1x,
+                            /img/Gallery/compressjpegTab/gallery-tab-foto4-2x-min.jpg 2x" />
+                <img src="./img/foto4.jpg" alt="foto4" width="370" height="294">
+            </picture>
+                <p class="overlay__text">
             Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
             шпионажа и атак на защищённые сервера конкурентов.
         </p>
@@ -129,8 +169,18 @@
     </li>
     <li class="icon">
         <div class="overlay">
-        <img src="./img/foto5.jpg" alt="foto5" width="370" height="294">
-        <p class="overlay__text">
+            <picture>
+                <source 
+                    media="(min-width:1200px)" 
+                    srcset="/img/Gallery/compressjpegDesktop/gallery-desktop-foto5-1x-min.jpg 1x,
+                            /img/Gallery/compressjpegDesktop/gallery-desktop-foto5-2x-min.jpg 2x" />
+                <source 
+                    media="(min-width:768px)" 
+                    srcset="/img/Gallery/compressjpegTab/gallery-tab-foto5-1x-min.jpg 1x,
+                            /img/Gallery/compressjpegTab/gallery-tab-foto5-2x-min.jpg 2x" />
+                <img src="./img/foto5.jpg" alt="foto5" width="370" height="294">
+            </picture>
+                <p class="overlay__text">
             Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
             шпионажа и атак на защищённые сервера конкурентов.
         </p>
@@ -142,8 +192,18 @@
     </li>
     <li class="icon">
         <div class="overlay">
-        <img src="./img/foto6.jpg" alt="foto6" width="370" height="294">
-        <p class="overlay__text">
+            <picture>
+                <source 
+                    media="(min-width:1200px)" 
+                    srcset="/img/Gallery/compressjpegDesktop/gallery-desktop-foto6-1x-min.jpg 1x,
+                        /img/Gallery/compressjpegDesktop/gallery-desktop-foto6-2x-min.jpg 2x" />
+                <source 
+                    media="(min-width:768px)" 
+                    srcset="/img/Gallery/compressjpegTab/gallery-tab-foto6-1x-min.jpg 1x,
+                        /img/Gallery/compressjpegTab/gallery-tab-foto6-2x-min.jpg 2x" />
+                <img src="./img/foto6.jpg" alt="foto6" width="370" height="294">
+            </picture>
+                <p class="overlay__text">
             Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
             шпионажа и атак на защищённые сервера конкурентов.
         </p>
@@ -155,8 +215,18 @@
     </li>
     <li class="icon">
         <div class="overlay">
-        <img src="./img/foto7.jpg" alt="foto7" width="370" height="294">
-        <p class="overlay__text">
+            <picture>
+                <source 
+                    media="(min-width:1200px)" 
+                    srcset="/img/Gallery/compressjpegDesktop/gallery-desktop-foto7-1x-min.jpg 1x,
+                            /img/Gallery/compressjpegDesktop/gallery-desktop-foto7-2x-min.jpg 2x" />
+                <source 
+                    media="(min-width:768px)" 
+                    srcset="/img/Gallery/compressjpegTab/gallery-tab-foto7-1x-min.jpg 1x,
+                            /img/Gallery/compressjpegTab/gallery-tab-foto7-2x-min.jpg 2x" />
+                <img src="./img/foto7.jpg" alt="foto7" width="370" height="294">
+            </picture>
+                <p class="overlay__text">
             Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
             шпионажа и атак на защищённые сервера конкурентов.
         </p>
@@ -168,8 +238,18 @@
     </li>
     <li class="icon">
         <div class="overlay">
-        <img src="./img/foto8.jpg" alt="foto8" width="370" height="294">
-        <p class="overlay__text">
+            <picture>
+                <source 
+                    media="(min-width:1200px)" 
+                    srcset="/img/Gallery/compressjpegDesktop/gallery-desktop-foto8-1x-min.jpg 1x,
+                            /img/Gallery/compressjpegDesktop/gallery-desktop-foto8-2x-min.jpg 2x" />
+                <source 
+                    media="(min-width:768px)" 
+                    srcset="/img/Gallery/compressjpegTab/gallery-tab-foto8-1x-min.jpg 1x,
+                            /img/Gallery/compressjpegTab/gallery-tab-foto8-2x-min.jpg 2x" />
+                <img src="./img/foto8.jpg" alt="foto8" width="370" height="294">
+            </picture>
+                <p class="overlay__text">
             Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
             шпионажа и атак на защищённые сервера конкурентов.
         </p>
@@ -181,8 +261,18 @@
     </li>
     <li class="icon">
         <div class="overlay">
-        <img src="./img/foto9.jpg" alt="foto9" width="370" height="294">
-        <p class="overlay__text">
+            <picture>
+                <source 
+                    media="(min-width:1200px)" 
+                    srcset="/img/Gallery/compressjpegDesktop/gallery-desktop-foto9-1x-min.jpg 1x,
+                            /img/Gallery/compressjpegDesktop/gallery-desktop-foto9-2x-min.jpg 2x" />
+                <source 
+                    media="(min-width:768px)"
+                    srcset="/img/Gallery/compressjpegTab/gallery-tab-foto9-1x-min.jpg 1x,
+                            /img/Gallery/compressjpegTab/gallery-tab-foto9-2x-min.jpg 2x" />
+                <img src="./img/foto9.jpg" alt="foto9" width="370" height="294">
+            </picture>
+                <p class="overlay__text">
             Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
             шпионажа и атак на защищённые сервера конкурентов.
         </p>
