--- a/index.html
+++ b/index.html
@@ -117,7 +117,13 @@
         <ul class="pictures">
         <li>
             <div class="pictures__thumb">
-            <img src="./img/box1.jpg" alt="Foto1" width="370" height="294">
+                <picture>
+                    <source 
+                        media="(min-width:1200px)" 
+                        srcset="./img/box1.jpg 1x,
+                                /img/pictures/pictures-foto1-2x-min.jpg 2x" />
+                        <img src="./img/box1.jpg" alt="Foto1" width="370" height="294">
+                </picture>
                 <div class="pictures-text">
                     <span class="pictures-text__title">Десктопные приложения</span>
                 </div>
@@ -125,7 +131,13 @@
         </li>
         <li>
             <div class="pictures__thumb">
-                <img src="./img/box2.jpg" alt="Foto2" width="370" height="294">
+                <picture>
+                    <source 
+                        media="(min-width:1200px)" 
+                        srcset="./img/box2.jpg 1x,
+                                /img/pictures/pictures-foto2-2x-min.jpg 2x" />
+                        <img src="./img/box2.jpg" alt="Foto2" width="370" height="294">
+                </picture>
                     <div class="pictures-text">
                 <span class="pictures-text__title">Мобильные приложения</span>
                     </div>
@@ -133,8 +145,14 @@
         </li>
         <li>
             <div class="pictures__thumb">
-                <img src="./img/box3.jpg" alt="Foto3" width="370" height="294">
-                <div class="pictures-text"> 
+                <picture>
+                    <source 
+                        media="(min-width:1200px)" 
+                        srcset="./img/box3.jpg 1x,
+                                /img/pictures/pictures-foto3-2x-min.jpg 2x" />
+                        <img src="./img/box3.jpg" alt="Foto3" width="370" height="294">
+                </picture>
+                    <div class="pictures-text"> 
                     <span class="pictures-text__title">Дизайнерские решения</span>
                 </div>           
             </div>
