--- a/index.html
+++ b/index.html
@@ -409,6 +409,7 @@
 </main>
 <!--Подвал -->
 <footer class="footer">
+    <section class="address-section">
     <div class="wrap-footer">
         <div class="container wrap-footer-container">
             <div class="footer-left-box">
@@ -430,6 +431,7 @@
                     </ul>
                 </address>
             </div>
+            </section>
             <section class="social-section">
                 <div class="social-container">
                     <h2 class="social-container__title">присоединяйтесь </h2>
