--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                     <source 
                         media="(min-width:1200px)" 
                         srcset="./img/box1.jpg 1x,
-                                /img/pictures-foto1-2x-min.jpg 2x" />
+                                ./img/pictures-foto1-2x-min.jpg 2x" />
                         <img src="./img/box1.jpg" alt="Foto1" width="370" height="294">
                 </picture>
                 <div class="pictures-text">
@@ -135,7 +135,7 @@
                     <source 
                         media="(min-width:1200px)" 
                         srcset="./img/box2.jpg 1x,
-                                /img/pictures-foto2-2x-min.jpg 2x" />
+                                ./img/pictures-foto2-2x-min.jpg 2x" />
                         <img src="./img/box2.jpg" alt="Foto2" width="370" height="294">
                 </picture>
                     <div class="pictures-text">
@@ -149,7 +149,7 @@
                     <source 
                         media="(min-width:1200px)" 
                         srcset="./img/box3.jpg 1x,
-                                /img/pictures-foto3-2x-min.jpg 2x" />
+                                ./img/pictures-foto3-2x-min.jpg 2x" />
                         <img src="./img/box3.jpg" alt="Foto3" width="370" height="294">
                 </picture>
                     <div class="pictures-text"> 
@@ -169,12 +169,12 @@
             <picture>
                 <source 
                     media="(min-width:1200px)" 
-                    srcset="/img/comands-desktop-foto1-1x-min.jpg 1x,
-                    /img/comands-desktop-foto1-2x-min.jpg 2x"/>
+                    srcset="./img/comands-desktop-foto1-1x-min.jpg 1x,
+                    ./img/comands-desktop-foto1-2x-min.jpg 2x"/>
                     <source 
                     media="(min-width:768px)" 
-                    srcset="/img/comands-tab-foto1-1x-min.jpg 1x,
-                    /img/comands-tab-foto1-2x-min.jpg 2x"/>
+                    srcset="./img/comands-tab-foto1-1x-min.jpg 1x,
+                    ./img/comands-tab-foto1-2x-min.jpg 2x"/>
                     <img class="item__img" src="./img/igor.jpg" alt="Igor">
             </picture>
                     <div class="item-info"> 
@@ -216,12 +216,12 @@
             <picture>
                 <source 
                     media="(min-width:1200px)" 
-                    srcset="/img/comands-desktop-foto2-1x-min.jpg 1x,
-                                /img/comands-desktop-foto2-2x-min.jpg 2x" />
+                    srcset="./img/comands-desktop-foto2-1x-min.jpg 1x,
+                                ./img/comands-desktop-foto2-2x-min.jpg 2x" />
                 <source 
                     media="(min-width:768px)" 
-                    srcset="/img/comands-tab-foto2-1x-min.jpg 1x,
-                                /img/comands-tab-foto2-2x-min.jpg 2x" />
+                    srcset="./img/comands-tab-foto2-1x-min.jpg 1x,
+                                ./img/comands-tab-foto2-2x-min.jpg 2x" />
                 <img class="item__img" src="./img/olga.jpg" alt="Olga">
             </picture>
                     <div class="item-info">
@@ -263,12 +263,12 @@
             <picture>
                 <source 
                     media="(min-width:1200px)" 
-                    srcset="/img/comands-desktop-foto3-1x-min.jpg 1x,
-                                /img/comands-desktop-foto3-2x-min.jpg 2x" />
+                    srcset="./img/comands-desktop-foto3-1x-min.jpg 1x,
+                                ./img/comands-desktop-foto3-2x-min.jpg 2x" />
                 <source 
                     media="(min-width:768px)" 
-                    srcset="/img/comands-tab-foto3-1x-min.jpg 1x,
-                                /img/comands-tab-foto3-2x-min.jpg 2x" />
+                    srcset="./img/comands-tab-foto3-1x-min.jpg 1x,
+                                ./img/comands-tab-foto3-2x-min.jpg 2x" />
                 <img class="item__img" src="./img/nikolay.jpg" alt="Nikolay">
             </picture>
                 <div class="item-info">
@@ -310,12 +310,12 @@
             <picture>
                 <source 
                     media="(min-width:1200px)" 
-                    srcset="/img/comands-desktop-foto4-1x-min.jpg 1x,
-                        /img/comands-desktop-foto4-2x-min.jpg 2x" />
+                    srcset="./img/comands-desktop-foto4-1x-min.jpg 1x,
+                        ./img/comands-desktop-foto4-2x-min.jpg 2x" />
                 <source 
                 media="(min-width:768px)" 
-                srcset="/img/comands-tab-foto4-1x-min.jpg 1x,
-                        /img/comands-tab-foto4-2x-min.jpg 2x" />
+                srcset="./img/comands-tab-foto4-1x-min.jpg 1x,
+                        ./img/comands-tab-foto4-2x-min.jpg 2x" />
                 <img class="item__img" src="./img/mikhail.jpg" alt="Michail">
             </picture>
                     <div class="item-info">
