--- a/portfolio.html
+++ b/portfolio.html
@@ -79,12 +79,12 @@
                 <picture>
                     <source 
                         media="(min-width:1200px)" 
-                        srcset="/img/gallery-desktop-foto1-1x-min.jpg 1x,
-                                /img/gallery-desktop-foto1-2x-min.jpg 2x" />
+                        srcset="./img/gallery-desktop-foto1-1x-min.jpg 1x,
+                                ./img/gallery-desktop-foto1-2x-min.jpg 2x" />
                     <source 
                         media="(min-width:768px)" 
-                        srcset="/img/gallery-tab-foto1-1x-min.jpg 1x,
-                                /img/gallery-tab-foto1-2x-min.jpg 2x" />
+                        srcset="./img/gallery-tab-foto1-1x-min.jpg 1x,
+                                ./img/gallery-tab-foto1-2x-min.jpg 2x" />
                     <img src="./img/foto1.jpg" alt="foto1" width="370" height="294">
                 </picture>
                         <p class="overlay__text">
@@ -103,12 +103,12 @@
                 <picture>
                     <source 
                         media="(min-width:1200px)" 
-                        srcset="/img/gallery-desktop-foto2-1x-min.jpg 1x,
-                                /img/gallery-desktop-foto2-2x-min.jpg 2x" />
+                        srcset="./img/gallery-desktop-foto2-1x-min.jpg 1x,
+                                ./img/gallery-desktop-foto2-2x-min.jpg 2x" />
                     <source 
                         media="(min-width:768px)" 
-                        srcset="/img/gallery-tab-foto2-1x-min.jpg 1x,
-                                /img/gallery-tab-foto2-2x-min.jpg 2x" />
+                        srcset="./img/gallery-tab-foto2-1x-min.jpg 1x,
+                                ./img/gallery-tab-foto2-2x-min.jpg 2x" />
                 <img src="./img/foto2.jpg" alt="foto2" width="370" height="294">
             </picture>
                     <p class="overlay__text">
@@ -126,12 +126,12 @@
             <picture>
                 <source 
                     media="(min-width:1200px)" 
-                    srcset="/img/gallery-desktop-foto3-1x-min.jpg 1x,
-                            /img/gallery-desktop-foto3-2x-min.jpg 2x" />
+                    srcset="./img/gallery-desktop-foto3-1x-min.jpg 1x,
+                            ./img/gallery-desktop-foto3-2x-min.jpg 2x" />
                 <source 
                     media="(min-width:768px)" 
-                    srcset="/img/gallery-tab-foto3-1x-min.jpg 1x,
-                            /img/gallery-tab-foto3-2x-min.jpg 2x" />
+                    srcset="./img/gallery-tab-foto3-1x-min.jpg 1x,
+                            ./img/gallery-tab-foto3-2x-min.jpg 2x" />
                 <img src="./img/foto3.jpg" alt="foto3" width="370" height="294">
             </picture>
                 <p class="overlay__text">
@@ -149,12 +149,12 @@
             <picture>
                 <source 
                     media="(min-width:1200px)" 
-                    srcset="/img/gallery-desktop-foto4-1x-min.jpg 1x,
-                            /img/gallery-desktop-foto4-2x-min.jpg 2x" />
+                    srcset="./img/gallery-desktop-foto4-1x-min.jpg 1x,
+                            ./img/gallery-desktop-foto4-2x-min.jpg 2x" />
                 <source 
                     media="(min-width:768px)" 
-                    srcset="/img/gallery-tab-foto4-1x-min.jpg 1x,
-                            /img/gallery-tab-foto4-2x-min.jpg 2x" />
+                    srcset="./img/gallery-tab-foto4-1x-min.jpg 1x,
+                            ./img/gallery-tab-foto4-2x-min.jpg 2x" />
                 <img src="./img/foto4.jpg" alt="foto4" width="370" height="294">
             </picture>
                 <p class="overlay__text">
@@ -172,12 +172,12 @@
             <picture>
                 <source 
                     media="(min-width:1200px)" 
-                    srcset="/img/gallery-desktop-foto5-1x-min.jpg 1x,
-                            /img/gallery-desktop-foto5-2x-min.jpg 2x" />
+                    srcset="./img/gallery-desktop-foto5-1x-min.jpg 1x,
+                            ./img/gallery-desktop-foto5-2x-min.jpg 2x" />
                 <source 
                     media="(min-width:768px)" 
-                    srcset="/img/gallery-tab-foto5-1x-min.jpg 1x,
-                            /img/gallery-tab-foto5-2x-min.jpg 2x" />
+                    srcset="./img/gallery-tab-foto5-1x-min.jpg 1x,
+                            ./img/gallery-tab-foto5-2x-min.jpg 2x" />
                 <img src="./img/foto5.jpg" alt="foto5" width="370" height="294">
             </picture>
                 <p class="overlay__text">
@@ -195,12 +195,12 @@
             <picture>
                 <source 
                     media="(min-width:1200px)" 
-                    srcset="/img/gallery-desktop-foto6-1x-min.jpg 1x,
-                        /img/gallery-desktop-foto6-2x-min.jpg 2x" />
+                    srcset="./img/gallery-desktop-foto6-1x-min.jpg 1x,
+                        ./img/gallery-desktop-foto6-2x-min.jpg 2x" />
                 <source 
                     media="(min-width:768px)" 
-                    srcset="/img/gallery-tab-foto6-1x-min.jpg 1x,
-                        /img/gallery-tab-foto6-2x-min.jpg 2x" />
+                    srcset="./img/gallery-tab-foto6-1x-min.jpg 1x,
+                        ./img/gallery-tab-foto6-2x-min.jpg 2x" />
                 <img src="./img/foto6.jpg" alt="foto6" width="370" height="294">
             </picture>
                 <p class="overlay__text">
@@ -218,12 +218,12 @@
             <picture>
                 <source 
                     media="(min-width:1200px)" 
-                    srcset="/img/gallery-desktop-foto7-1x-min.jpg 1x,
-                            /img/gallery-desktop-foto7-2x-min.jpg 2x" />
+                    srcset="./img/gallery-desktop-foto7-1x-min.jpg 1x,
+                            ./img/gallery-desktop-foto7-2x-min.jpg 2x" />
                 <source 
                     media="(min-width:768px)" 
-                    srcset="/img/gallery-tab-foto7-1x-min.jpg 1x,
-                            /img/gallery-tab-foto7-2x-min.jpg 2x" />
+                    srcset="./img/gallery-tab-foto7-1x-min.jpg 1x,
+                            ./img/gallery-tab-foto7-2x-min.jpg 2x" />
                 <img src="./img/foto7.jpg" alt="foto7" width="370" height="294">
             </picture>
                 <p class="overlay__text">
@@ -241,12 +241,12 @@
             <picture>
                 <source 
                     media="(min-width:1200px)" 
-                    srcset="/img/gallery-desktop-foto8-1x-min.jpg 1x,
-                            /img/gallery-desktop-foto8-2x-min.jpg 2x" />
+                    srcset="./img/gallery-desktop-foto8-1x-min.jpg 1x,
+                            ./img/gallery-desktop-foto8-2x-min.jpg 2x" />
                 <source 
                     media="(min-width:768px)" 
-                    srcset="/img/gallery-tab-foto8-1x-min.jpg 1x,
-                            /img/gallery-tab-foto8-2x-min.jpg 2x" />
+                    srcset="./img/gallery-tab-foto8-1x-min.jpg 1x,
+                            ./img/gallery-tab-foto8-2x-min.jpg 2x" />
                 <img src="./img/foto8.jpg" alt="foto8" width="370" height="294">
             </picture>
                 <p class="overlay__text">
@@ -264,12 +264,12 @@
             <picture>
                 <source 
                     media="(min-width:1200px)" 
-                    srcset="/img/gallery-desktop-foto9-1x-min.jpg 1x,
-                            /img/gallery-desktop-foto9-2x-min.jpg 2x" />
+                    srcset="./img/gallery-desktop-foto9-1x-min.jpg 1x,
+                            ./img/gallery-desktop-foto9-2x-min.jpg 2x" />
                 <source 
                     media="(min-width:768px)"
-                    srcset="/img/gallery-tab-foto9-1x-min.jpg 1x,
-                            /img/gallery-tab-foto9-2x-min.jpg 2x" />
+                    srcset="./img/gallery-tab-foto9-1x-min.jpg 1x,
+                            ./img/gallery-tab-foto9-2x-min.jpg 2x" />
                 <img src="./img/foto9.jpg" alt="foto9" width="370" height="294">
             </picture>
                 <p class="overlay__text">
